--- a/src/main/resources/static/scss/components/_tables.scss
+++ b/src/main/resources/static/scss/components/_tables.scss
@@ -116,3 +116,8 @@ form.seamless {
 .page-link {
     color: $text-color;
 }
+
+// Styling for column padding
+.column-padding {
+    padding-top: 20px;
+}
